--- a/ip-quoter.cabal
+++ b/ip-quoter.cabal
@@ -15,5 +15,13 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  build-depends:       base >=4.8 && <5
+  exposed-modules:     Network.IP.Quoter
+  build-depends:       base >=4.8 && <5, template-haskell
+  default-language:    Haskell2010
+
+test-suite test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             test.hs
+  build-depends:       base >=4.8 && <5, tasty, tasty-hunit, network, ip-quoter
   default-language:    Haskell2010
