--- a/ip-quoter.cabal
+++ b/ip-quoter.cabal
@@ -15,13 +15,17 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Network.IP.Quoter
-  build-depends:       base >=4.8 && <5, template-haskell
-  default-language:    Haskell2010
+  exposed-modules:   Network.IP.Quoter
+  build-depends:     base >=4.8 && <5, template-haskell
+  default-language:  Haskell2010
 
 test-suite test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             test.hs
-  build-depends:       base >=4.8 && <5, tasty, tasty-hunit, network, ip-quoter
-  default-language:    Haskell2010
+  type:              exitcode-stdio-1.0
+  hs-source-dirs:    test
+  main-is:           test.hs
+  build-depends:     base >=4.8 && <5, tasty, tasty-hunit, network, ip-quoter
+  default-language:  Haskell2010
+
+source-repository head
+  type:              git
+  location:          git://github.com/shlevy/ip-quoter.git
