--- a/ip-quoter.cabal
+++ b/ip-quoter.cabal
@@ -1,11 +1,9 @@
 name:                ip-quoter
-version:             1.0.0.0
+version:             1.0.1.0
 synopsis:            Quasiquoter for IP addresses
 description:
   A quasiquoter for IP address literals – That is, IPv4 decimal-dotted or IPv6
   colon-separated notation.
-
-  Currently only IPv4 addresses are implemented.
 homepage:            https://github.com/shlevy/ip-quoter
 license:             MIT
 license-file:        LICENSE
@@ -18,14 +16,19 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:   Network.IP.Quoter
-  build-depends:     base >=4.8 && <5, template-haskell, split, network
+  build-depends:     base >=4.8 && <5, template-haskell, network, cpu
   default-language:  Haskell2010
 
 test-suite test
   type:              exitcode-stdio-1.0
   hs-source-dirs:    test
   main-is:           test.hs
-  build-depends:     base >=4.8 && <5, tasty, tasty-hunit, network, ip-quoter
+  build-depends:     base >=4.8 && <5,
+                     tasty,
+                     tasty-hunit,
+                     network,
+                     cpu,
+                     ip-quoter
   default-language:  Haskell2010
 
 source-repository head
